tests/NormalTests/paczka1/fuzzy1/68007210.err
Error in line 3: S887 A284 78,4
Error in line 4: ig60OIEW A69 33,0
Error in line 10: S887 A69 C7,2
Error in line 5: S887 A69 49,0
Error in line 14: djxfJz S887 0,0
Error in line 18: JSIT A284 69,
Error in line 17: djxfJz A284 68,0
Error in line 1: JSIT A69 49,2
Error in line 24: JSIT S887 49,0
Error in line 28: ig60OIEW A69 79,1
